kubernetes/apps/media/radarr/radarr-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  serviceName: radarr
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: radarr-volume
          persistentVolumeClaim:
            claimName: radarr-volume-pvc
        - name: downloads-volume
          persistentVolumeClaim:
            claimName: radarr-downloads-pvc
        - name: movies-volume
          persistentVolumeClaim:
            claimName: radarr-movies-pvc
        - name: tmpvol
          emptyDir:
            medium: Memory
            sizeLimit: 64Mi
      containers:
        - name: radarr
          image: ghcr.io/onedr0p/radarr:5.1.3@sha256:855a515502332fbadff3f3aac7841e54337bbafab33d2857f55d6aa6c1b6469c
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: radarr-volume
              mountPath: /config
            - name: downloads-volume
              mountPath: /media/downloads
            - name: movies-volume
              mountPath: /media/movies
            - name: tmpvol
              mountPath: /tmp
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  ports:
    - port: 7878
      protocol: TCP
      targetPort: 7878
  selector:
    app: radarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: radarr-ingress
  namespace: media
spec:
  ingressClassName: nginx-external
  rules:
    - host: media.${DOMAIN_NAME}
      http:
        paths:
          - path: /radarr
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
